--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "expo-barcode-scanner": "~11.2.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
